fix signals